--- a/templates/base/patient/patientOrdoForm.html.twig
+++ b/templates/base/patient/patientOrdoForm.html.twig
@@ -56,6 +56,7 @@
     <form id="ordoComposer" action="{{ config.protocol }}{{ config.host }}{{ config.urlHostSuffixe }}/patient/actions/saveOrdoForm/" target="_blank" method="post" class="">
         <input type="hidden" name="porteur" value="{{ page.ordo.porteur }}"></input>
         <input type="hidden" name="module" value="{{ page.ordo.module }}"></input>
+        <input type="hidden" name="ordoForm" value="{{ page.ordo.ordoForm }}"></input>
         <div class="row">
             <div class="col-md-2">
                 <div class="form-group">
